# agentgraph

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  query_log.py
backend/routers/: agent.py  chat.py  explorer.py  graph.py  logs.py  pipeline.py  scenarios.py  system.py  workspace.py
core/: graph.py  persistence.py  pipeline.py  stage.py  state.py
core/nodes/: conclude_node.py  execute_node.py  intent_node.py  reflect_node.py  sql_node.py
core/reasoning/: __init__.py  evaluator.py  executor.py  graph.py  nodes.py  planner.py  prompts.py  state.py
core/reasoning/strategies/: __init__.py  base.py  causal.py  comparative.py  statistical.py  trend.py  whatif.py
core/stages/: __init__.py  attribution.py  build_kg.py  connect.py  enrich.py  introspect.py  text_to_sql.py  train_sql.py
docs/: CURRENT_STATUS.md  FEATURE_DESIGN.md  SYSTEM_DESIGN.md  TECHNICAL_REPORT.md
docs/diagrams/: reasoning-loop.drawio  strategy-composition.drawio  v2-architecture.drawio
experiments/: README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
knowledge/: doc_retriever.py  schema_builder.py  vanna_store.py  workspace.py
workspaces/supply-chain/: causal_graph.json  engine_graph.json  few_shots.json  few_shots_auto.json  knowledge_graph.json  pipeline_state.json  schema_dict.yaml  workspace.yaml
workspaces/template/: causal_graph.json  schema_dict.yaml  workspace.yaml
(+41 files in other folders)
